# school

./: Class2XmlHelper.py  README.md  bitarray.py  ticktacktoe.py  tries.py
charts2png/: readme.md
charts2png/echarts-export/: echarts-export.js  options-example.js
coursera/proglang-003/: README.txt
coursera/proglang-003/homework 1/: hw1.sml  hw1test.sml
coursera/proglang-003/hw0/: hw0test.sml
coursera/proglang-003/hw1/: hw1.sml  hw1test.sml
coursera/proglang-003/hw2/: hw2.sml  hw2test.sml
coursera/proglang-003/hw3/: hw3.sml  hw3test.sml  hw3test_additional.sml
coursera/proglang-003/hw4/: OneNote 目录.onetoc2  hw4.rkt  hw4combined_tests_with_graphics.rkt  hw4test.rkt
coursera/proglang-003/hw5/: hw5.rkt  hw5test.rkt
coursera/proglang-003/hw6/: hw6assignment.rb
coursera/proglang-003/hw7/: hw7.rb  hw7.sml  hw7testsprovided.rb  hw7testsprovided.sml
cpp_workspace/t1/: CMakeLists.txt
cpp_workspace/t2/: CMakeLists.txt  README  runhello.sh
cpp_workspace/t2/doc/: hello.txt
cpp_workspace/t2/src/: CMakeLists.txt
cpp_workspace/t3/: README
cpp_workspace/t3/lib/: CMakeLists.txt  hello.c
cpp_workspace/t4/src/: CMakeLists.txt  main.c
data_structure/: tries.py
helpers/: Class2XmlHelper.py
ip_lib/: spammodule.c
leetcode/: CMakeLists.txt  add_two_number.cc  two_sum.cc
projecteuler/: problem_001.py  problem_002.py  problem_003.py  problem_004.py  problem_005.py  problem_006.py  problem_007.py  problem_008.py
