PROJECT(HELLO)

MESSAGE(STATUS "This is binary dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is source dir " ${HELLO_SOURCE_DIR})

ADD_SUBDIRECTORY(src)

INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
